# NoobRenderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
Editor/: CMakeLists.txt  Editor.cpp  Editor.h  Main.cpp
Editor/Application/: ApplicationUI.cpp  ApplicationUI.h  Common.cpp  Common.h  PanelFunction.cpp  PanelFunction.h  PanelInspector.cpp  PanelInspector.h  PanelPreference.cpp  PanelPreference.h  PanelScene.cpp  PanelScene.h  PanelViewport.cpp  PanelViewport.h  Selected.h
Editor/Application/FileBrowser/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiFileDialogConfig.h
Editor/Application/FontAwesome/: IconsFont.h  IconsFontAwesome6.h
Editor/Application/Gizmo/: ImGuizmo.cpp  ImGuizmo.h  NoobGizmo.cpp  NoobGizmo.h
Editor/Application/Inspector/: Inspector.cpp  Inspector.h  ModelPreview.cpp  ModelPreview.h  Registration.h
Editor/Application/Shader/: Debug.frag  Debug.vert  Preview.frag  Sobel.frag  Sobel.vert
Editor/Application/Visualization/: OutlinePass.cpp  OutlinePass.h
Editor/Config/: EditorConfig.json  UiConfig.json
Engine/: CMakeLists.txt  EngineConfig.json  NoobEngine.cpp  NoobEngine.h  Registeration.h  Window.cpp  Window.h
Engine/Core/: Base.hpp  GraphicsAPI.cpp  GraphicsAPI.h  Serialization.cpp  Serialization.h  Utility.cpp  Utility.h
Engine/Function/: Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Engine/Function/Buffer/: All.h  BufferBase.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  RenderBuffer.cpp  RenderBuffer.h  UniformBuffer.cpp  UniformBuffer.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Engine/Function/Component/: All.h  BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  Component.h  IBLCubeMap.cpp  IBLCubeMap.h  Light.h  MeshData.h  ScreenSpaceReflection.h  Transform.h  VoxelGlobalIllumination.h
Engine/Function/Graphics/: Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h
Engine/Function/Graphics/Material/: All.h  Material.h  MaterialUtilities.cpp  PBRMaterial.h
Engine/Function/Graphics/Texture/: All.h  ColorTexture.cpp  ColorTexture.h  CubeMapTexture.cpp  CubeMapTexture.h  DepthTexture.cpp  DepthTexture.h  HDRBufferTexture.cpp  HDRBufferTexture.h  LookUpTexture.cpp  LookUpTexture.h  MultiSampleTexture.cpp  MultiSampleTexture.h  Texture.cpp  Texture.h  TextureBase.cpp  TextureBase.h  WriteToTexture.cpp  WriteToTexture.h
Engine/Function/Utility/: Helpers.cpp  Helpers.h  RayCasting.cpp  RayCasting.h
Engine/Render/: All.h  DeferredRenderer.cpp  DeferredRenderer.h  ForwardPBRRenderer.cpp  ForwardPBRRenderer.h  Renderer.h
Engine/Render/Collections/: CascadeShadow.cpp  CascadeShadow.h  LinearTransformCosine.h  OmnidirectionalShadow.cpp  OmnidirectionalShadow.h  Utils.cpp  Utils.h  VoxelGlobalIllumination.cpp  VoxelGlobalIllumination.h
Engine/Render/Pass/: AmbientPass.cpp  AmbientPass.h  FinalPass.cpp  FinalPass.h  ForwardPass.cpp  ForwardPass.h  GeometryPass.cpp  GeometryPass.h  IndirectLightPass.cpp  IndirectLightPass.h  LightPass.cpp  LightPass.h  RenderPass.h  SSAOPass.cpp  SSAOPass.h  SSRPass.cpp  SSRPass.h  ShadowPass.cpp  ShadowPass.h  Utils.cpp  Utils.h
Engine/System/: AnimationSystem.cpp  AnimationSystem.h  GraphicSystem.cpp  GraphicSystem.h
Pluto/: CMakeLists.txt  PlutoEngine.cpp  PlutoEngine.h
Pluto/Backend/: Architecture.md  BufferObject.cpp  CMakeLists.txt
Pluto/Backend/Include/Backend/: Backend.h  BackendEnums.h  BufferDescriptor.h  BufferObject.h  Handle.h  Present.h  Program.h  RHIBase.h  SamplerDescriptor.h  Utils.h  VertexBuffer.h
Pluto/Backend/OpenGL/: GLBase.h  GLBufferObject.h  GLContext.cpp  GLContext.h  GLHeaders.h  GLProgram.cpp  GLProgram.h  GLShaderCompiler.cpp  GLShaderCompiler.h  GLTexture.h
Pluto/Backend/Vulkan/: Intro.md
Pluto/Core/: Asset.h  Base.hpp  FileSystem.cpp  FileSystem.h  Log.hpp  Utilities.cpp  Utilities.h
Pluto/Core/Utilities/: LoadImage.cpp  LoadImage.h
Pluto/Graphics/: Window.cpp  Window.h
Pluto/Graphics/Backend/OpenGL/: GL.h  GLCommandBuffer.cpp  GLCommandBuffer.h  GLCommandCall.h  GLCommandEmulated.cpp  GLCommandEmulated.h  GLContext.cpp  GLContext.h  GLDebug.cpp  GLDebug.h  GLDescriptorSet.cpp  GLDescriptorSet.h  GLFramebuffer.cpp  GLFramebuffer.h  GLIMGUIRenderer.cpp  GLIMGUIRenderer.h  GLIndexBuffer.cpp  GLIndexBuffer.h  GLPipeline.cpp  GLPipeline.h  GLRenderCommand.cpp  GLRenderCommand.h  GLRenderContext.cpp  GLRenderContext.h  GLRenderDevice.cpp  GLRenderDevice.h  GLRenderPass.cpp  GLRenderPass.h  GLShader.cpp  GLShader.h  GLSwapChain.cpp  GLSwapChain.h  GLTexture.cpp  GLTexture.h  GLUniformBuffer.cpp  GLUniformBuffer.h  GLUtilities.cpp  GLUtilities.h  GLVertexBuffer.cpp  GLVertexBuffer.h
Pluto/Graphics/RHI/: BufferLayout.cpp  BufferLayout.h  BufferLayout.hpp  CommandBuffer.cpp  CommandBuffer.h  Declarations.h  DescriptorSet.cpp  DescriptorSet.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  IMGUIRenderer.cpp  IMGUIRenderer.h  IndexBuffer.cpp  IndexBuffer.h  Pipeline.cpp  Pipeline.h  RHIBase.cpp  RHIBase.h  RenderCommand.cpp  RenderCommand.h  RenderContext.h  RenderDevice.cpp  RenderDevice.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  Utilities.cpp  Utilities.h  VertexBuffer.cpp  VertexBuffer.h
Pluto/ShaderFiles/: CMakeLists.txt  Preprocess.cpp  Preprocess.h  ShaderLists.txt  Test.frag  Test.vert  TestTexture.frag  TestTexture.vert  TestTriangle.frag  TestTriangle.vert
Pluto/Third/SPIRV-Cross/: CMakeLists.txt
Test/: CMakeLists.txt  TestRHI.cpp  Test_1_Window.cpp
Test/RHI/: 01_Triangle.cpp  02_Texture.cpp  03_DepthBuffering.cpp  03_Test.cpp  03_Uniform.cpp  Platform.h
Test/RHI/OpenGL/: TestPipeline.cpp  TestRHI.cpp  TestShader.cpp  TestTriangle.cpp  TestVertexbuffer.cpp
Test/RHI/Vulkan/: TestTriangle.cpp
Third/: CMakeLists.txt
Third/assimp/: CMakeLists.txt
Third/glad/src/: glad.c
Third/glfw/: CMakeLists.txt
Third/imgui/: imgui_demo.cpp  imgui_widgets.cpp
(+96 files in other folders)
