set(TARGET_NAME ${PLUTO_ENGINE_BACKEND})
project(${TARGET_NAME})

file(GLOB GL_IMPL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/OpenGL/*.cpp)
file(GLOB VK_IMPL_HDR ${CMAKE_CURRENT_SOURCE_DIR}/Vulkan/*.h)

set(SOURCES ${GL_IMPL_SRC} ${GL_IMPL_HDR})

add_library(${TARGET_NAME} STATIC ${SOURCES})

target_include_directories(${TARGET_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Include)
